<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/background_color">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textAlignment="viewEnd"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/display_result_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2+3"
            android:textSize="35sp"
            android:textColor="@color/washed_text_color"
            android:textAlignment="viewEnd"
            android:id="@+id/display_calculation_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/clear_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/delete_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plusOrMinus"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/plus_minus_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/divide_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_seven"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_eight"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_nine"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/multiply_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_four"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_five"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_six"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/minus_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_one"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_two"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_three"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/plus_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/period_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/button_zero"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/equal_button"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>